--- a/css/style.css
+++ b/css/style.css
@@ -23,15 +23,16 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 3.4rem;
     color: var(--blanco);
+    font-weight: normal;
 }
 h2 {
     font-size: 2.8rem;
 }
 h3 {
-    font-size: 2.2rem;
+    font-size: 2.4rem;
 }
 h4 {
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
 p {
     font-size: 1.6rem;
@@ -41,10 +42,17 @@ img {
     max-width: 100%;
 }
 a {
-    font-size: 2rem;
+    font-size: 1.8rem;
     text-decoration: none;
+    font-family: var(--fuenteHeading);
 }
-
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+span {
+    font-weight: bold;
+}
 /** GLOBALES */
 .contenedor {
     max-width: 120rem;
@@ -55,6 +63,19 @@ a {
 /** UTILITY */
 .no-margin {
     margin: 0;
+}
+.two-columns {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 4rem;
+}
+@media (max-width: 768px) {
+    .two-columns {
+        grid-template-columns: 1fr;
+    }
+}
+.bg-black {
+    background-color: var(--negro);
 }
 
 /** HEADER */
@@ -81,4 +102,37 @@ a {
 .header__texto {
     margin-top: 15rem;
     text-align: center;
+}
+.entradas {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+.entrada__texto {
+    text-align: justify;
+    margin-bottom: 4rem;
+}
+.entrada__boton {
+    background-color: var(--negro);
+    text-transform: uppercase;
+    color: white;
+    padding: 1rem 2rem;
+    margin-top: 2rem;
+}
+.widget-curso {
+    padding: 3rem 0;
+}
+.widget-curso:first-of-type {
+    border-bottom: 1px solid var(--negro);
+}
+.widget-curso__boton {
+    background-color: var(--primario);
+    color: var(--blanco);
+    padding: 1rem 1rem;
+    border: none;
+    cursor: pointer;
+    font-size: 2rem;
+}
+.footer {
+    margin-top: 5rem;
 }
