--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ span {
     margin-top: 15rem;
     text-align: center;
 }
+@media (max-width: 768px) {
+    .asides {
+        padding-top: 6rem;
+    }
+}
 .entradas {
     display: flex;
     flex-direction: column;
@@ -149,6 +154,12 @@ main {
     grid-template-columns: 1fr 1.5fr;
     column-gap: 4rem;
     align-items: center;
+}
+@media (max-width: 768px) {
+    .nosotros {
+        grid-template-columns: 1fr;
+        row-gap: 4rem;
+    }
 }
 .nosotros__texto p{
     font-size: 2rem;
